<resources>
    <string name="app_name">Learning Bank</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_up_to_continue">Sign-up to Continue</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="google_id_gso">664306322664-n0s5f4cvrh5ma82q5kjp53qpoeh14aiu.apps.googleusercontent.com</string>
    <string name="facebook_app_id">592667648047443</string>
    <string name="fb_login_protocol_scheme">fb592667648047443</string>

</resources>
