<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@id/login_txt_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/welcome"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo"

            />


        <TextView
            android:id="@+id/login_txt_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_up_to_continue"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt_welcome" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:padding="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toTopOf="@id/layout_already_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt_continue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:hint="user name"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/blue"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_emailnew"
                        android:drawablePadding="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:hint="youremail@email.com"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/blue"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/register_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_mobile"
                        android:drawablePadding="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:hint="mobile number"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/blue"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/register_mobile"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/blue"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/register_btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_btn"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp"
                    android:text="Signup"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/layout_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_cardView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Already Have an Account? "
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Login"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>