<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@id/login_txt_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_back"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_regular"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo"

            />


        <TextView
            android:id="@+id/login_txt_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt_welcome" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:padding="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toTopOf="@id/login_txt_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt_continue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:drawableStart="@drawable/ic_emailnew"
                        android:drawablePadding="20dp"
                        android:hint="youremail@email.com"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/blue" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_email"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="20dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/blue" />

                    <TextView
                        android:id="@+id/login_forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_password"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:text="Forget Password?"
                        android:fontFamily="@font/poppins_regular"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textColor="@android:color/black" />


                </RelativeLayout>

                <Button
                    android:id="@+id/login_btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_btn"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp"
                    android:text="Login"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/login_txt_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="OR"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/login_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_cardView" />

        <TextView
            android:id="@+id/login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/shape_btn"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingStart="40dp"
            android:paddingTop="5dp"
            android:paddingEnd="40dp"
            android:paddingBottom="5dp"
            android:text=" SignIn  with  Google "
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"

            app:layout_constraintBottom_toTopOf="@id/login_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt_or" />

        <LinearLayout
            android:id="@+id/login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@id/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/login_google"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn"
                android:drawableStart="@drawable/ic_facebook"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingTop="5dp"
                android:paddingEnd="40dp"
                android:paddingBottom="5dp"
                android:text="SignIn with Facebook"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_regular"
                />
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="gone">
            </com.facebook.login.widget.LoginButton>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_google">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New user? "
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_SingUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="SignUp"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold" />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>